# MakerChecker-Backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: database.py  exceptions.py  models.py  oauth2.py  schemas.py  utils.py
app/routes/: auth.py  roles.py  todos.py  users.py
app/seeding/: data.json
app/validators/: user.py
